# SFLCARS

./: .gitignore  CMakeLists.txt  SFLCARS.sln  build_all.sh
.github/workflows/: ccpp.yml
SFLCARS/: Bar.cpp  Bar.hpp  Button.cpp  Button.hpp  Display.cpp  Display.hpp  InputBox.cpp  RoundRectangle.hpp  SFLCARS.cpp  SFLCARS.hpp  SFLCARS.vcxproj  SFLCARS.vcxproj.filters  String.cpp  TextBar.cpp  TextBar.hpp  main.cpp
SFLCARS-Server/: Client.hpp  Commands.hpp  NetworkAudioStream.cpp  NetworkAudioStream.hpp  SFLCARS-Server.vcxproj  SFLCARS-Server.vcxproj.filters  Server.cpp  Server.hpp  main.cpp
SFLCARS-Test/: SFLCARS-Test.vcxproj  main.cpp  resources
SFLCARS-commandline/: CMakeLists.txt  SFLCARS-commandline.vcxproj  main.cpp
SFLCARS-interface/: Bar.cpp  Bar.hpp  Button.cpp  Button.hpp  CMakeLists.txt  Display.cpp  Display.hpp  Element.cpp  Element.hpp  HorizontalLayout.cpp  HorizontalLayout.hpp  InputBox.cpp  InputBox.hpp  Layout.cpp  Layout.hpp  ResourceManager.cpp  ResourceManager.hpp  Resources.hpp  RoundRectangle.cpp  RoundRectangle.hpp  SFLCARS-interface.vcxproj  SFLCARS-interface.vcxproj.filters  SFLCARS.cpp  SFLCARS.hpp  Spacer.cpp  Spacer.hpp  String.cpp  String.hpp  TextBar.cpp  TextBar.hpp  Theme.cpp  Theme.hpp  VerticalLayout.cpp  VerticalLayout.hpp  interface.conf
SFLCARS-main/: Alarm.cpp  Alarm.hpp  AlarmEditState.cpp  AlarmEditState.hpp  AlarmListState.cpp  AlarmListState.hpp  AlarmState.cpp  AlarmState.hpp  AnimationManager.cpp  AnimationManager.hpp  AppEngine.cpp  AppEngine.hpp  AppState.hpp  CMakeLists.txt  InitialiseState.cpp  InitialiseState.hpp  IntercomState.cpp  IntercomState.hpp  Listener.cpp  Listener.hpp  LoginState.cpp  LoginState.hpp  MainMenuState.cpp  MainMenuState.hpp  MessageSendState.cpp  MessageSendState.hpp  Network.hpp  NetworkEvent.hpp  NetworkRecorder.cpp  NetworkRecorder.hpp  SFLCARS-main.vcxproj  SFLCARS-main.vcxproj.filters  StandbyState.cpp  StandbyState.hpp  SystemMonitorState.cpp  SystemMonitorState.hpp  UserAccount.cpp  UserAccount.hpp  UserAccountManager.cpp  UserAccountManager.hpp  (+4 more)
SFLCARS-server/: CMakeLists.txt  Server.cpp  sflcars-server
SFLCARS-utility/: CMakeLists.txt  Command.cpp  Command.hpp  Commands.hpp  Date.cpp  Date.hpp  NetworkAudioStream.cpp  NetworkAudioStream.hpp  Password.cpp  Password.hpp  SFLCARS-utility.vcxproj  SFLCARS-utility.vcxproj.filters  SettingsParser.cpp  SettingsParser.hpp  Time.cpp  Time.hpp  Utility.cpp  Utility.hpp
SFLCARS/interface/: Button.hpp
src/: SFLCARS.cpp  SFLCARS.hpp  main.cpp
src/interface/: Bar.cpp  Bar.hpp  Button.cpp  Button.hpp  Display.cpp  Display.hpp  Element.cpp  Element.hpp  InputBox.cpp  InputBox.hpp  Layout.cpp  Layout.hpp  Spacer.cpp  Spacer.hpp  String.cpp  String.hpp  TextBar.cpp  TextBar.hpp  TextButton.hpp
